# fcitx5-bamboo

./: .gitmodules  CMakeLists.txt  Messages.sh  README  org.fcitx.Fcitx5.Addon.Bamboo.metainfo.xml.in
.github/workflows/: check.yml
bamboo/: CMakeLists.txt  bamboo-c.go  engine_utils.go  fcitxbambooengine.go  go.mod  macrotable.go  utils.go
data/: CMakeLists.txt
po/: CMakeLists.txt  LINGUAS  fcitx5-bamboo.pot  fr.po  ko.po  ru.po  vi.po  zh_CN.po  zh_TW.po
src/: CMakeLists.txt  bamboo-addon.conf.in.in  bamboo.conf.in  bamboo.cpp  bamboo.h  bambooconfig.h
